# mohamed-ziena

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  gui.py  hr_db.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
tests/: test_gui.py  test_hr_db.py
