[metadata]
name = mohamed-ziena
version = 0.1.0
description = Minimal HR management GUI application
long_description = file: README.md
long_description_content_type = text/markdown
author = mohamed ziena
author_email = mohamedaboziena09@gmail.com
url = https://github.com/mohamedaboziena09-design/mohamed-ziena
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: User Interfaces

[options]
packages = find:
install_requires =
    PyQt5>=5.15.0
python_requires = >=3.8
